--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "firebase": "^3.17.2",
+    "firebase": "^6.6.1",
     "leaflet": "^1.3.4",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-leaflet": "^2.0.1",
+    "react-redux": "^7.1.1",
     "react-scripts": "1.1.5",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "redux": "^4.0.4",
+    "redux-form": "^8.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
