--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "author": "Igor Vasiliev <helmsman@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^4.1.3",
     "firebase": "^6.6.1",
     "leaflet": "^1.3.4",
     "react": "^16.5.0",
@@ -27,6 +26,7 @@
   },
   "devDependencies": {
     "css-loader": "^1.0.0",
+    "webpack": "^4.0.0",
     "style-loader": "^0.23.0"
   }
 }
