--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "Igor Vasiliev <helmsman@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "firebase": "^6.6.1",
     "leaflet": "^1.3.4",
     "react": "^16.5.0",
@@ -16,7 +18,8 @@
     "react-scripts": "1.1.5",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.4",
-    "redux-form": "^8.2.6"
+    "redux-form": "^8.2.6",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,7 +29,7 @@
   },
   "devDependencies": {
     "css-loader": "^1.0.0",
-    "webpack": "^4.0.0",
-    "style-loader": "^0.23.0"
+    "style-loader": "^0.23.0",
+    "webpack": "^4.0.0"
   }
 }
