--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "firebase": "^6.6.1",
-    "leaflet": "^1.3.4",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-leaflet": "^2.0.1",
-    "react-redux": "^7.1.1",
-    "react-scripts": "1.1.5",
-    "reactstrap": "^6.4.0",
-    "redux": "^4.0.4",
-    "redux-form": "^8.2.6",
-    "styled-components": "^4.3.2",
     "i18next": "13.1.5",
     "i18next-browser-languagedetector": "2.2.4",
     "i18next-locize-backend": "^1.7.1",
     "i18next-xhr-backend": "1.5.1",
-    "react-i18next": "9.0.6"
+    "leaflet": "^1.3.4",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-i18next": "9.0.6",
+    "react-leaflet": "^2.0.1",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^4.4.0-beta.8",
+    "react-scripts": "1.1.5",
+    "reactstrap": "^6.4.0",
+    "redux": "^4.0.4",
+    "redux-form": "^8.2.6",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
