--- a/package.json
+++ b/package.json
@@ -8,23 +8,25 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^1.0.0",
+    "eslint": "^6.4.0",
+    "eslint-plugin-react": "^7.14.3",
+    "prettier": "1.18.2",
     "style-loader": "^0.23.0",
     "webpack": "^4.41.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
     "bfj": "^7.0.1",
-    "eslint": "^6.4.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "^3.0.1",
     "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
     "file-loader": "^4.2.0",
     "firebase": "^6.6.1",
