--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "devDependencies": {
     "css-loader": "^1.0.0",
     "eslint": "^6.4.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
+    "husky": "^3.0.5",
+    "lint-staged": "^9.4.0",
     "prettier": "1.18.2",
     "style-loader": "^0.23.0",
     "webpack": "^4.41.0"
@@ -45,6 +49,7 @@
     "pnp-webpack-plugin": "^1.5.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-safe-parser": "^4.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.5.0",
     "react-dev-utils": "^9.0.4",
     "react-dom": "^16.5.0",
@@ -66,7 +71,16 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "precommit": "lint-staged",
+    "eslint": "node_modules/.bin/eslint src/"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "node_modules/.bin/eslint --max-warnings=0",
+      "prettier --write",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
