--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   },
   "lint-staged": {
     "*.{js,jsx}": [
-      "node_modules/.bin/eslint --max-warnings=0",
+      "node_modules/.bin/eslint --max-warnings=0 --no-ignore",
       "prettier --write",
       "git add"
     ]
